<resources>
    <!-- Splash -->
    <string name="app_name">Profile Creator</string>
    <string name="version">Versión 1.0</string>
    <string name="creator">Creado por\n Mauricio Casillas</string>

    <!-- Form -->
    <string name="formInst">Llena todos los campos para crear tu perfil.</string>
    <string name="formNameTool">Nombre</string>
    <string name="formLastNameTool">Apellido</string>
    <string name="nameHint">Escribe tu nombre(s)</string>
    <string name="lastNameHint">Escribe tu apellido(s)</string>
    <string name="birthHint">Elige tu fecha de nacimiento</string>
    <string name="emailHint">Escribe tu correo electrónico</string>
    <string name="numberHint">Escribe tu número de cuenta (9 dígitos)</string>
    <string name="spinnerHint">Elige una carrera</string>
    <string name="submit">Enviar Datos</string>
    <string name="dateInst">Ingresa tu fecha de nacimiento</string>

    <!-- Spinner options -->
    <string-array name="spinnerOpt">
        <item>Ingeniería Aeroespacial</item>
        <item>Ingeniería Ambiental</item>
        <item>Ingeniería Civil</item>
        <item>Ingeniería en Computación</item>
        <item>Ingeniería Eléctrica Electrónica</item>
        <item>Ingeniería Geofísica</item>
        <item>Ingeniería Geológica</item>
        <item>Ingeniería Geomática</item>
        <item>Ingeniería Industrial</item>
        <item>Ingeniería Mecánica</item>
        <item>Ingeniería Mecatrónica</item>
        <item>Ingeniería de Minas y Metalurgia</item>
        <item>Ingeniería Petrolera</item>
        <item>Ingeniería en Telecomunicaciones</item>
        <item>Ingeniería en Sistemas Biomédicos</item>
    </string-array>

    <!-- Form Warnings -->
    <string name="nameWarning">Ingresa un nombre(s)</string>
    <string name="lastNameWarning">Ingresa un apellido(s)</string>
    <string name="emailWarning">Ingresa un correo válido</string>
    <string name="numberWarning">Ingresa un número de cuenta válido</string>
    <string name="birthWarning">Ingresa una fecha de nacimiento válida</string>

    <!-- Zodiac -->
    <string name="aries">Aries &#x2348;</string>
    <string name="taurus">Tauro &#x2649;</string>
    <string name="gemini">Geminis &#x264A;</string>
    <string name="cancer">Cancer &#x264B;</string>
    <string name="leo">Leo &#x264C;</string>
    <string name="virgo">Virgo &#x264D;</string>
    <string name="libra">Libra &#x264E;</string>
    <string name="scorpio">Escorpio &#x264F;</string>
    <string name="sagittarius">Sagitario &#x2650;</string>
    <string name="capricorn">Capricornio &#x2651;</string>
    <string name="aquarius">Acuario &#x2652;</string>
    <string name="pisces">Piscis &#x2653;</string>

    <string name="wrongDate">Fecha no válida</string>

    <!-- Chinese  -->
    <string name="rat">Rata &#x1F400;</string>
    <string name="ox">Buey &#x1F402;</string>
    <string name="tiger">Tigre &#x1F405;</string>
    <string name="rabbit">Conejo &#x1F407;</string>
    <string name="dragon">Dragón &#x1F409;</string>
    <string name="snake">Serpiente &#x1F40D;</string>
    <string name="horse">Caballo &#x1F40E;</string>
    <string name="goat">Cabra &#x1F410;</string>
    <string name="monkey">Mono &#x1F412;</string>
    <string name="rooster">Gallo &#x1F983;</string>
    <string name="dog">Perro &#x1F415;</string>
    <string name="pig">Puerco &#x1F416;</string>

    <string name="wrongChinese">No se puede calcular el horóscopo</string>

    <!-- Element -->
    <string name="metal">Metal &#x1FAA8;</string>
    <string name="water">Agua &#x1F4A7;</string>
    <string name="wood">Madera &#x1FAB5;</string>
    <string name="fire">Fuego &#x1F525;</string>
    <string name="earth">Tierra &#x26F0;</string>

    <string name="wrongElement">Error en el elemento</string>

    <!-- Result -->
    <string name="fullName">%1$s %2$s</string>
    <string name="emailResult">Email:\n%s</string>
    <string name="numberResult">Número de cuenta:\n%s</string>
    <string name="age">Edad:\n%d año(s) cumplido(s)</string>
    <string name="zodiacResult">Signo del Zodiaco:\n%s</string>
    <string name="chineseResult">Zodiaco Chino:\n%s</string>
    <string name="elementResult">Elemento chino:\n%s</string>
    <string name="description">bgImage</string>

    <!-- Tools -->
    <string name="toolName">NOMBRE COMPLETO</string>
    <string name="toolEmail">CORREO</string>
    <string name="toolNumber">NUMERO DE CUENTA</string>
    <string name="toolAge">EDAD</string>
    <string name="toolZodiac">SIGNO DEL ZODIACO</string>
    <string name="toolChinese">SIGNO CHINO</string>
    <string name="toolElement">ELEMENTO</string>

</resources>